--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@ckeditor/ckeditor5-angular": "^9.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
     "@floating-ui/dom": "^1.6.13",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
     "@primeng/themes": "^19.0.10",
     "bootstrap": "^5.3.5",
     "jquery": "^3.7.1",
+    "moment": "^2.30.1",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
