--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.5",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
+    "ngx-editor": "^18.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.0.10",
     "rxjs": "~7.8.0",
